# Polymarket-crypto-5min-arbitrage-bot

./: Cargo.toml  Dockerfile
src/: config.rs  main.rs  scalp.rs
src/monitor/: orderbook.rs
