[package]
name = "poly_5min_bot"
version = "0.1.0"
edition = "2021"
default-run = "poly_5min_bot"

[dependencies]
ctor = "0.2"

polymarket-client-sdk = { version = "0.4.3", features = [
    "clob",
    "ctf",
    "data",
    "gamma",
    "ws",
    "tracing"
] }

tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# reqwest locked to rustls (NO aws-lc)
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots"
] }

hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

rust_decimal = "1.40"
rust_decimal_macros = "1.40"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

# alloy aligned with rustls 0.23 + ring
alloy = { version = "1.3", default-features = false, features = [
    "signer-local",
    "signers",
    "reqwest",
    "reqwest-rustls-tls",
    "providers",
    "contract"
] }

chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = "0.10"

# 🚨 DO NOT add rustls here as a normal dependency
# it is forced below via patch

# 🔥 THIS IS THE KEY FIX — FORCE RING ONLY 🔥
[patch.crates-io]
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26.4", default-features = false }
aws-lc-rs = { version = "0.0.0" }
aws-lc-sys = { version = "0.0.0" }
